tests/suite/snapshots/suite__case_c2dt.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: DoubleQuote
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: DoubleQuoted
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 9
- token: DoubleQuote
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: MappingValue
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: Scalar
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 16
- token: CollectionEntry
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 17
- token: Break
  start:
    line: 1
    column: 17
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: DoubleQuote
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: DoubleQuoted
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 9
- token: DoubleQuote
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 10
- token: MappingValue
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: Separator
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 12
- token: Scalar
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 17
- token: CollectionEntry
  start:
    line: 2
    column: 17
  end:
    line: 2
    column: 18
- token: Break
  start:
    line: 2
    column: 18
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: DoubleQuote
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: DoubleQuoted
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 6
- token: DoubleQuote
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: MappingValue
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Empty
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 8
- token: Break
  start:
    line: 3
    column: 8
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: MappingEnd
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Break
  start:
    line: 4
    column: 1
  end:
    line: 5
    column: 0

