tests/suite/snapshots/suite__case_c4hz.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DirectiveName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: TagHandle
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Separator
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: TagPrefix
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 31
- token: Break
  start:
    line: 0
    column: 31
  end:
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: TagHandle
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: TagSuffix
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 10
- token: Break
  start:
    line: 1
    column: 10
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: Comment
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: CommentText
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 35
- token: Break
  start:
    line: 2
    column: 35
  end:
    line: 3
    column: 0
- token: Separator
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Comment
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: CommentText
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 34
- token: Break
  start:
    line: 3
    column: 34
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: TagHandle
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: TagSuffix
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 9
- token: Break
  start:
    line: 4
    column: 9
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 8
- token: MappingValue
  start:
    line: 5
    column: 8
  end:
    line: 5
    column: 9
- token: Separator
  start:
    line: 5
    column: 9
  end:
    line: 5
    column: 10
- token: Anchor
  start:
    line: 5
    column: 10
  end:
    line: 5
    column: 11
- token: AnchorName
  start:
    line: 5
    column: 11
  end:
    line: 5
    column: 17
- token: Separator
  start:
    line: 5
    column: 17
  end:
    line: 5
    column: 18
- token: MappingStart
  start:
    line: 5
    column: 18
  end:
    line: 5
    column: 19
- token: Scalar
  start:
    line: 5
    column: 19
  end:
    line: 5
    column: 20
- token: MappingValue
  start:
    line: 5
    column: 20
  end:
    line: 5
    column: 21
- token: Separator
  start:
    line: 5
    column: 21
  end:
    line: 5
    column: 22
- token: Scalar
  start:
    line: 5
    column: 22
  end:
    line: 5
    column: 24
- token: CollectionEntry
  start:
    line: 5
    column: 24
  end:
    line: 5
    column: 25
- token: Separator
  start:
    line: 5
    column: 25
  end:
    line: 5
    column: 26
- token: Scalar
  start:
    line: 5
    column: 26
  end:
    line: 5
    column: 27
- token: MappingValue
  start:
    line: 5
    column: 27
  end:
    line: 5
    column: 28
- token: Separator
  start:
    line: 5
    column: 28
  end:
    line: 5
    column: 29
- token: Scalar
  start:
    line: 5
    column: 29
  end:
    line: 5
    column: 32
- token: MappingEnd
  start:
    line: 5
    column: 32
  end:
    line: 5
    column: 33
- token: Break
  start:
    line: 5
    column: 33
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: Scalar
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 8
- token: MappingValue
  start:
    line: 6
    column: 8
  end:
    line: 6
    column: 9
- token: Separator
  start:
    line: 6
    column: 9
  end:
    line: 6
    column: 10
- token: Scalar
  start:
    line: 6
    column: 10
  end:
    line: 6
    column: 11
- token: Break
  start:
    line: 6
    column: 11
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: SequenceEntry
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Separator
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 2
- token: TagHandle
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: TagSuffix
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 7
- token: Break
  start:
    line: 7
    column: 7
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 2
- token: Scalar
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 7
- token: MappingValue
  start:
    line: 8
    column: 7
  end:
    line: 8
    column: 8
- token: Separator
  start:
    line: 8
    column: 8
  end:
    line: 8
    column: 9
- token: Alias
  start:
    line: 8
    column: 9
  end:
    line: 8
    column: 10
- token: AnchorName
  start:
    line: 8
    column: 10
  end:
    line: 8
    column: 16
- token: Break
  start:
    line: 8
    column: 16
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 2
- token: Scalar
  start:
    line: 9
    column: 2
  end:
    line: 9
    column: 8
- token: MappingValue
  start:
    line: 9
    column: 8
  end:
    line: 9
    column: 9
- token: Separator
  start:
    line: 9
    column: 9
  end:
    line: 9
    column: 10
- token: MappingStart
  start:
    line: 9
    column: 10
  end:
    line: 9
    column: 11
- token: Separator
  start:
    line: 9
    column: 11
  end:
    line: 9
    column: 12
- token: Scalar
  start:
    line: 9
    column: 12
  end:
    line: 9
    column: 13
- token: MappingValue
  start:
    line: 9
    column: 13
  end:
    line: 9
    column: 14
- token: Separator
  start:
    line: 9
    column: 14
  end:
    line: 9
    column: 15
- token: Scalar
  start:
    line: 9
    column: 15
  end:
    line: 9
    column: 17
- token: CollectionEntry
  start:
    line: 9
    column: 17
  end:
    line: 9
    column: 18
- token: Separator
  start:
    line: 9
    column: 18
  end:
    line: 9
    column: 19
- token: Scalar
  start:
    line: 9
    column: 19
  end:
    line: 9
    column: 20
- token: MappingValue
  start:
    line: 9
    column: 20
  end:
    line: 9
    column: 21
- token: Separator
  start:
    line: 9
    column: 21
  end:
    line: 9
    column: 22
- token: Scalar
  start:
    line: 9
    column: 22
  end:
    line: 9
    column: 25
- token: Separator
  start:
    line: 9
    column: 25
  end:
    line: 9
    column: 26
- token: MappingEnd
  start:
    line: 9
    column: 26
  end:
    line: 9
    column: 27
- token: Break
  start:
    line: 9
    column: 27
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 0
- token: SequenceEntry
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 1
- token: Separator
  start:
    line: 10
    column: 1
  end:
    line: 10
    column: 2
- token: TagHandle
  start:
    line: 10
    column: 2
  end:
    line: 10
    column: 3
- token: TagSuffix
  start:
    line: 10
    column: 3
  end:
    line: 10
    column: 8
- token: Break
  start:
    line: 10
    column: 8
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 2
- token: Scalar
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 7
- token: MappingValue
  start:
    line: 11
    column: 7
  end:
    line: 11
    column: 8
- token: Separator
  start:
    line: 11
    column: 8
  end:
    line: 11
    column: 9
- token: Alias
  start:
    line: 11
    column: 9
  end:
    line: 11
    column: 10
- token: AnchorName
  start:
    line: 11
    column: 10
  end:
    line: 11
    column: 16
- token: Break
  start:
    line: 11
    column: 16
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 2
- token: Scalar
  start:
    line: 12
    column: 2
  end:
    line: 12
    column: 7
- token: MappingValue
  start:
    line: 12
    column: 7
  end:
    line: 12
    column: 8
- token: Separator
  start:
    line: 12
    column: 8
  end:
    line: 12
    column: 9
- token: Scalar
  start:
    line: 12
    column: 9
  end:
    line: 12
    column: 17
- token: Break
  start:
    line: 12
    column: 17
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 2
- token: Scalar
  start:
    line: 13
    column: 2
  end:
    line: 13
    column: 6
- token: MappingValue
  start:
    line: 13
    column: 6
  end:
    line: 13
    column: 7
- token: Separator
  start:
    line: 13
    column: 7
  end:
    line: 13
    column: 8
- token: Scalar
  start:
    line: 13
    column: 8
  end:
    line: 13
    column: 30
- token: Break
  start:
    line: 13
    column: 30
  end:
    line: 14
    column: 0

