tests/suite/snapshots/suite__case_cfd4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: SequenceStart
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Empty
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 4
    line: 0
    column: 4
- token: MappingValue
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Scalar
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 15
    line: 0
    column: 15
- token: Separator
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 16
    line: 0
    column: 16
- token: SequenceEnd
  start:
    index: 16
    line: 0
    column: 16
  end:
    index: 17
    line: 0
    column: 17
- token: Break
  start:
    index: 17
    line: 0
    column: 17
  end:
    index: 19
    line: 1
    column: 0
- token: Indent
  start:
    index: 19
    line: 1
    column: 0
  end:
    index: 19
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 19
    line: 1
    column: 0
  end:
    index: 20
    line: 1
    column: 1
- token: Separator
  start:
    index: 20
    line: 1
    column: 1
  end:
    index: 21
    line: 1
    column: 2
- token: SequenceStart
  start:
    index: 21
    line: 1
    column: 2
  end:
    index: 22
    line: 1
    column: 3
- token: Empty
  start:
    index: 22
    line: 1
    column: 3
  end:
    index: 22
    line: 1
    column: 3
- token: MappingValue
  start:
    index: 22
    line: 1
    column: 3
  end:
    index: 23
    line: 1
    column: 4
- token: Separator
  start:
    index: 23
    line: 1
    column: 4
  end:
    index: 24
    line: 1
    column: 5
- token: Scalar
  start:
    index: 24
    line: 1
    column: 5
  end:
    index: 41
    line: 1
    column: 22
- token: SequenceEnd
  start:
    index: 41
    line: 1
    column: 22
  end:
    index: 42
    line: 1
    column: 23
- token: Break
  start:
    index: 42
    line: 1
    column: 23
  end:
    index: 44
    line: 2
    column: 0

