tests/suite/snapshots/suite__case_cn3r.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Anchor
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: AnchorName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: SequenceStart
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: Break
  start:
    line: 0
    column: 10
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: MappingValue
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Scalar
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: CollectionEntry
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: Break
  start:
    line: 1
    column: 6
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Anchor
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: AnchorName
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Scalar
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: MappingValue
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Scalar
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: CollectionEntry
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: Break
  start:
    line: 2
    column: 9
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Separator
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: MappingStart
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Separator
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: Anchor
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: AnchorName
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 5
- token: Separator
  start:
    line: 3
    column: 5
  end:
    line: 3
    column: 6
- token: Scalar
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: MappingValue
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Separator
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: Scalar
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 10
- token: Separator
  start:
    line: 3
    column: 10
  end:
    line: 3
    column: 11
- token: MappingEnd
  start:
    line: 3
    column: 11
  end:
    line: 3
    column: 12
- token: CollectionEntry
  start:
    line: 3
    column: 12
  end:
    line: 3
    column: 13
- token: Break
  start:
    line: 3
    column: 13
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Separator
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Anchor
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: AnchorName
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Separator
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: MappingStart
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Separator
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: Scalar
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: MappingValue
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: Separator
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: Scalar
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 10
- token: Separator
  start:
    line: 4
    column: 10
  end:
    line: 4
    column: 11
- token: MappingEnd
  start:
    line: 4
    column: 11
  end:
    line: 4
    column: 12
- token: Break
  start:
    line: 4
    column: 12
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: SequenceEnd
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Break
  start:
    line: 5
    column: 1
  end:
    line: 6
    column: 0

