tests/suite/snapshots/suite__case_cpz3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: MappingValue
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Separator
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: DoubleQuote
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: Escape
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: EscapeCode
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: DoubleQuoted
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 14
- token: DoubleQuote
  start:
    line: 1
    column: 14
  end:
    line: 1
    column: 15
- token: Break
  start:
    line: 1
    column: 15
  end:
    line: 2
    column: 0

