tests/suite/snapshots/suite__case_ct4q.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceStart
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 3
    line: 1
    column: 0
- token: MappingKey
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 1
- token: Separator
  start:
    index: 4
    line: 1
    column: 1
  end:
    index: 5
    line: 1
    column: 2
- token: Scalar
  start:
    index: 5
    line: 1
    column: 2
  end:
    index: 8
    line: 1
    column: 5
- token: ScalarSpace
  start:
    index: 8
    line: 1
    column: 5
  end:
    index: 10
    line: 2
    column: 0
- token: Indent
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 10
    line: 2
    column: 0
- token: Separator
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 11
    line: 2
    column: 1
- token: Scalar
  start:
    index: 11
    line: 2
    column: 1
  end:
    index: 14
    line: 2
    column: 4
- token: Separator
  start:
    index: 14
    line: 2
    column: 4
  end:
    index: 15
    line: 2
    column: 5
- token: MappingValue
  start:
    index: 15
    line: 2
    column: 5
  end:
    index: 16
    line: 2
    column: 6
- token: Separator
  start:
    index: 16
    line: 2
    column: 6
  end:
    index: 17
    line: 2
    column: 7
- token: Scalar
  start:
    index: 17
    line: 2
    column: 7
  end:
    index: 20
    line: 2
    column: 10
- token: Break
  start:
    index: 20
    line: 2
    column: 10
  end:
    index: 22
    line: 3
    column: 0
- token: Indent
  start:
    index: 22
    line: 3
    column: 0
  end:
    index: 22
    line: 3
    column: 0
- token: SequenceEnd
  start:
    index: 22
    line: 3
    column: 0
  end:
    index: 23
    line: 3
    column: 1
- token: Break
  start:
    index: 23
    line: 3
    column: 1
  end:
    index: 25
    line: 4
    column: 0

