tests/suite/snapshots/suite__case_cup7.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 8
    line: 0
    column: 8
- token: MappingValue
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: Separator
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: TagHandle
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: TagSuffix
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 16
    line: 0
    column: 16
- token: Separator
  start:
    index: 16
    line: 0
    column: 16
  end:
    index: 17
    line: 0
    column: 17
- token: Anchor
  start:
    index: 17
    line: 0
    column: 17
  end:
    index: 18
    line: 0
    column: 18
- token: AnchorName
  start:
    index: 18
    line: 0
    column: 18
  end:
    index: 24
    line: 0
    column: 24
- token: Separator
  start:
    index: 24
    line: 0
    column: 24
  end:
    index: 25
    line: 0
    column: 25
- token: Scalar
  start:
    index: 25
    line: 0
    column: 25
  end:
    index: 30
    line: 0
    column: 30
- token: Break
  start:
    index: 30
    line: 0
    column: 30
  end:
    index: 32
    line: 1
    column: 0
- token: Indent
  start:
    index: 32
    line: 1
    column: 0
  end:
    index: 32
    line: 1
    column: 0
- token: Scalar
  start:
    index: 32
    line: 1
    column: 0
  end:
    index: 37
    line: 1
    column: 5
- token: MappingValue
  start:
    index: 37
    line: 1
    column: 5
  end:
    index: 38
    line: 1
    column: 6
- token: Separator
  start:
    index: 38
    line: 1
    column: 6
  end:
    index: 39
    line: 1
    column: 7
- token: Alias
  start:
    index: 39
    line: 1
    column: 7
  end:
    index: 40
    line: 1
    column: 8
- token: AnchorName
  start:
    index: 40
    line: 1
    column: 8
  end:
    index: 46
    line: 1
    column: 14
- token: Break
  start:
    index: 46
    line: 1
    column: 14
  end:
    index: 48
    line: 2
    column: 0

