tests/suite/snapshots/suite__case_cxx2.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at  &anchor a: b\r\n"
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

