tests/suite/snapshots/suite__case_d83l.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Literal
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: IndentationIndicator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: ChompingIndicator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: Break
  start:
    line: 0
    column: 5
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 27
- token: Break
  start:
    line: 1
    column: 27
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Literal
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: ChompingIndicator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: IndentationIndicator
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: Break
  start:
    line: 2
    column: 5
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 27
- token: Break
  start:
    line: 3
    column: 27
  end:
    line: 4
    column: 0

